--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>EU Edge Test</title>
+    <link rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="js/d3.min.js"></script>
 </head>
 <body>
-
+<div class="row">
+    <button id="btn-add">Add</button>
+</div>
+<div class="row">
+    <table id="table-persons">
+        <thead>
+        <th>Name (job title)</th>
+        <th>Age</th>
+        <th>Nickname</th>
+        <th>Employee</th>
+        <th></th>
+        </thead>
+        <tbody>
+        <tr>
+            <td>asd</td>
+            <td>asd</td>
+            <td>asd</td>
+            <td>asd</td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="row">
+    <label for="ta-data-dump">Data dump</label>
+    <textarea id="ta-data-dump">asd
+    </textarea>
+</div>
 </body>
 </html>
