grid column styling funcionality

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
     <table id="table-persons">
         <thead>
         <tr>
-            <th>Name (job title)</th>
-            <th>Age</th>
-            <th>Nickname</th>
-            <th>Employee</th>
-            <th></th>
+            <th class="text-left">Name (job title)</th>
+            <th class="text-right">Age</th>
+            <th class="text-left">Nickname</th>
+            <th class="text-center">Employee</th>
+            <th class="text-center"></th>
         </tr>
         </thead>
         <tbody>
