sorting and deleting

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
     <button id="btn-add">Add</button>
 </div>
 <div class="row">
-    <table id="table-persons">
+    <table id="table-persons" class="ee-grid">
         <thead>
         <tr>
-            <th class="text-left">Name (job title)</th>
+            <th class="text-left sortable" id="th-persons-sort">Name (job title)</th>
             <th class="text-right">Age</th>
             <th class="text-left">Nickname</th>
             <th class="text-center">Employee</th>
