--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,9 @@
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/ee-util.js"></script>
     <script type="text/javascript" src="js/ee-grid.js"></script>
+    <script type="text/javascript" src="js/ee-modal.js"></script>
 </head>
 <body>
-<div class="row">
-    <button id="btn-add">Add</button>
-</div>
 <div class="row">
     <table id="table-persons" class="ee-grid">
         <thead>
@@ -26,6 +24,9 @@
         <tbody>
         </tbody>
     </table>
+</div>
+<div class="row">
+    <button id="btn-add">Add</button>
 </div>
 <div class="row">
     <label for="ta-data-dump">Data dump</label>
