removed unnecessary forked items modified gulpfile

--- a/src/index.html
+++ b/src/index.html
@@ -2,37 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EU Edge Test</title>
+    <title>Fanni HTML sandbox</title>
     <link rel="stylesheet" href="css/style.css"/>
-    <script type="text/javascript" src="js/ee-util.js"></script>
-    <script type="text/javascript" src="js/ee-grid.js"></script>
-    <script type="text/javascript" src="js/ee-template.js"></script>
-    <script type="text/javascript" src="js/ee-modal.js"></script>
-    <script type="text/javascript" src="js/ee-form.js"></script>
 </head>
 <body>
-<div class="row">
-    <button id="btn-add">Add</button>
-</div>
-<div class="row">
-    <table id="table-persons" class="ee-grid">
-        <thead>
-        <tr>
-            <th class="text-left sortable" id="th-persons-sort">Name (job title)</th>
-            <th class="text-right">Age</th>
-            <th class="text-left">Nickname</th>
-            <th class="text-center">Employee</th>
-            <th class="text-center"></th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-</div>
-<div class="row">
-    <label for="ta-data-dump">Data dump</label>
-    <textarea id="ta-data-dump"></textarea>
-</div>
+<h1>Hello World!</h1>
+<a href="fics.html">ficcek</a>
 </body>
-<script type="text/javascript" src="js/dashboard.js"></script>
 </html>
